<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <DatePicker
            android:id="@+id/fragmentFilterMeetingByTimeDatePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="30dp"/>

        <Button
            android:id="@+id/fragmentFilterMeetingByTimeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:text="@string/stop_filtering"
            android:background="#00000000"
            android:textSize="30sp"
            android:textColor="@color/black" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>